--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-openai>=1.3.0
-streamlit==1.30.0
-beautifulsoup4==4.12.3
-requests==2.31.0
-tenacity==8.5.0
-icalendar==5.0.12
-tiktoken==0.4.0
+streamlit==1.25.0          # Streamlit for the web app
+openai==0.27.8             # OpenAI API client for GPT-3.5/GPT-4
+google-auth-oauthlib==1.0.0  # For Google OAuth 2.0 flow
+google-api-python-client==2.92.0  # Google Calendar API client
+icalendar==5.0.7           # Parsing ICS calendar files
+beautifulsoup4==4.12.2     # HTML parsing for Kleinanzeigen page
+requests==2.31.0           # HTTP requests for web fetching
