--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit==1.25.0           # Web-App Framework (Streamlit Cloud Deployment)
-openai==0.27.8              # OpenAI API Client (GPT-3.5/GPT-4 Anbindung)
-google-auth-oauthlib==1.0.0 # Google OAuth 2.0 Flow (für Google APIs)
-google-api-python-client==2.92.0  # Google Calendar API Client (Kalenderintegration)
-icalendar==5.0.7            # iCalendar Verarbeitung (ICS-Dateien parsen/erstellen)
-beautifulsoup4==4.12.2      # HTML-Parsing (Webseite von Kleinanzeigen auslesen)
-requests==2.31.0            # HTTP-Anfragen (Web Requests an Kleinanzeigen/OpenAI)
-tenacity==8.5.0             # Widerholungs-Logik (Retry-Mechanismen, z.B. für API-Aufrufe)
-tiktoken==0.4.0             # Tokenizer für GPT (Token-Zählung bei Prompt-Verarbeitung)
-python-dotenv==1.0.0        # Laden von Umgebungsvariablen aus .env-Datei
-urllib3<2
+streamlit==1.25.0          # Streamlit for the web app
+openai==0.27.8             # OpenAI API client for GPT-3.5/GPT-4
+google-auth-oauthlib==1.0.0  # For Google OAuth 2.0 flow
+google-api-python-client==2.92.0  # Google Calendar API client
+icalendar==5.0.7           # Parsing ICS calendar files
+beautifulsoup4==4.12.2     # HTML parsing for Kleinanzeigen page
+requests==2.31.0           # HTTP requests for web fetching
