--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.25.0          # Streamlit for the web app
-openai==0.27.8             # OpenAI API client for GPT-3.5/GPT-4
+openai>=1.0
 google-auth-oauthlib==1.0.0  # For Google OAuth 2.0 flow
 google-api-python-client==2.92.0  # Google Calendar API client
 icalendar==5.0.7           # Parsing ICS calendar files
@@ -7,3 +7,5 @@ beautifulsoup4==4.12.2     # HTML parsing for Kleinanzeigen page
 requests==2.31.0           # HTTP requests for web fetching
 python-dotenv==1.0.0
 urllib3<2 
+ollama>=0.1
+python-dateutil>=2.8
